[gd_scene load_steps=13 format=3 uid="uid://diof505m65a5r"]

[ext_resource type="Script" path="res://pause-start/pause_menu.gd" id="1_d3jr4"]
[ext_resource type="Shader" path="res://pause-start/pause-menu.gdshader" id="2_20bm4"]
[ext_resource type="FontFile" uid="uid://l13vsimldkel" path="res://pause-start/DeliusSwashCaps-Regular.ttf" id="3_6q2my"]
[ext_resource type="PackedScene" uid="uid://bvi37umd6qho6" path="res://pause-start/input_settings.tscn" id="4_cqxnl"]
[ext_resource type="AudioStream" uid="uid://pp1pw7rrpkmt" path="res://Music/Overgreen Underground City Final mp3.mp3" id="5_h7uti"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_og1m7"]
shader = ExtResource("2_20bm4")
shader_parameter/lod = 0.7

[sub_resource type="Animation" id="Animation_km343"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pause:top_level")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InputSettings/PanelContainer:top_level")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("option:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("option:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("option:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("option:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("InputSettings/PanelContainer:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("option:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hqcvt"]
resource_name = "blur"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pause:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pause:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pause:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pause:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("pause:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect2:material:shader_parameter/lod")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.05, 0, 0.05, 0, 0.7, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("pause:top_level")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_8v68g"]
resource_name = "controls"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("option:top_level")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InputSettings/PanelContainer:top_level")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("InputSettings/PanelContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("option:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5lhtq"]
resource_name = "options"
length = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pause:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pause:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pause:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pause:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 0, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("option:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("option:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("option:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("option:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("pause:top_level")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("option:top_level")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_iar3t"]
resource_name = "quit"
length = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pause:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pause:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pause:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pause:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 0, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("pause:top_level")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("quit:modulate:r")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("quit:modulate:g")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("quit:modulate:b")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("quit:modulate:a")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("quit:top_level")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xipfo"]
_data = {
"RESET": SubResource("Animation_km343"),
"blur": SubResource("Animation_hqcvt"),
"controls": SubResource("Animation_8v68g"),
"options": SubResource("Animation_5lhtq"),
"quit": SubResource("Animation_iar3t")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d3jr4")

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_og1m7")
layout_mode = 0
offset_right = 475.0
offset_bottom = 269.0

[node name="pause" type="PanelContainer" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -57.0
offset_right = 77.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="pause"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="pauseContainer" type="VBoxContainer" parent="pause/MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="pause/MarginContainer/pauseContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_6q2my")
text = "Resume"

[node name="Options" type="Button" parent="pause/MarginContainer/pauseContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_6q2my")
text = "Options"

[node name="Exit" type="Button" parent="pause/MarginContainer/pauseContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_6q2my")
text = "Exit"

[node name="option" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -57.0
offset_right = 77.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="option"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="optionContainer" type="VBoxContainer" parent="option/MarginContainer"]
layout_mode = 2

[node name="Controls" type="Button" parent="option/MarginContainer/optionContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_6q2my")
theme_override_font_sizes/font_size = 16
text = "Controls"

[node name="Fullscreen" type="Button" parent="option/MarginContainer/optionContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_6q2my")
theme_override_font_sizes/font_size = 16
text = "Go Fullscreen"

[node name="Back" type="Button" parent="option/MarginContainer/optionContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_6q2my")
theme_override_font_sizes/font_size = 16
text = "Back
"

[node name="quit" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -57.0
offset_right = 77.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="quit"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="quitContainer" type="VBoxContainer" parent="quit/MarginContainer"]
layout_mode = 2

[node name="To Main" type="Button" parent="quit/MarginContainer/quitContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("3_6q2my")
text = "To Main Menu"

[node name="Quit" type="Button" parent="quit/MarginContainer/quitContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("3_6q2my")
text = "Quit Game"

[node name="Back2" type="Button" parent="quit/MarginContainer/quitContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("3_6q2my")
text = "Back"

[node name="InputSettings" parent="." instance=ExtResource("4_cqxnl")]
process_mode = 3
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 0.0

[node name="PanelContainer" parent="InputSettings" index="0"]
modulate = Color(1, 1, 1, 0)
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -104.0
offset_right = 77.5
offset_bottom = 104.0

[node name="InputButton" parent="InputSettings/PanelContainer/MarginContainer/controlContainer/ScrollContainer/ActionList" index="0"]
theme_override_fonts/font = ExtResource("3_6q2my")

[node name="ResetButton" parent="InputSettings/PanelContainer/MarginContainer/controlContainer" index="1"]
theme_override_fonts/font = ExtResource("3_6q2my")
theme_override_font_sizes/font_size = 16

[node name="Back3" parent="InputSettings/PanelContainer/MarginContainer/controlContainer" index="2"]
theme_override_fonts/font = ExtResource("3_6q2my")
theme_override_font_sizes/font_size = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xipfo")
}

[node name="musicPlayer" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_h7uti")
autoplay = true

[connection signal="pressed" from="pause/MarginContainer/pauseContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="pause/MarginContainer/pauseContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="pause/MarginContainer/pauseContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="option/MarginContainer/optionContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="option/MarginContainer/optionContainer/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="option/MarginContainer/optionContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="quit/MarginContainer/quitContainer/To Main" to="." method="_on_to_main_pressed"]
[connection signal="pressed" from="quit/MarginContainer/quitContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="quit/MarginContainer/quitContainer/Back2" to="." method="_on_back_2_pressed"]
[connection signal="pressed" from="InputSettings/PanelContainer/MarginContainer/controlContainer/Back3" to="." method="_on_back_3_pressed"]

[editable path="InputSettings"]
[editable path="InputSettings/PanelContainer"]
